// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[containers] <Document /> renders correctly when NODE_ENV=development 1`] = `
Array [
  <link
    as="script"
    href="undefined/_next/static/buildId/pagespathname.js"
    rel="preload"
  />,
  <link
    as="script"
    href="undefined/_next/static/buildId/pages/_app.js"
    rel="preload"
  />,
  <link
    as="script"
    href="undefined/_next/static/buildId/pages/_error.js"
    rel="preload"
  />,
  null,
  <link
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    rel="stylesheet"
  />,
  <meta
    charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
    name="viewport"
  />,
  null,
  <div
    id="__next"
  />,
  null,
  null,
  null,
  null,
]
`;

exports[`[containers] <Document /> renders currectly when NODE_ENV=production 1`] = `
Array [
  <link
    as="script"
    href="undefined/_next/static/buildId/pagespathname.js"
    rel="preload"
  />,
  <link
    as="script"
    href="undefined/_next/static/buildId/pages/_app.js"
    rel="preload"
  />,
  <link
    as="script"
    href="undefined/_next/static/buildId/pages/_error.js"
    rel="preload"
  />,
  null,
  <link
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    rel="stylesheet"
  />,
  <meta
    charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
    name="viewport"
  />,
  <link
    href="/assets/main.css?buildId"
    rel="stylesheet"
  />,
  <div
    id="__next"
  />,
  null,
  null,
  null,
  null,
]
`;
